--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,42 @@
-name: CI
+# This is a basic workflow to help you get started with Actions
+name: CI-CD
+
+# Controls when the action will run. 
 on:
+  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [main]
+    branches: [ main ]
   pull_request:
-    branches: [main]
+    branches: [ main ]
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+  
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
-    # We're running on ubuntu-latest, nothing special
+  # This workflow contains multiple jobs
+  build_test:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [116.x]
+        
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # As usual, we simply checkout the project
-      - name: Checkout
-        uses: actions/checkout@v2
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
-      # This action is provided by Cypress. It installs node and the NPM
-      # dependencies, and caches them.
-      - name: Cypress install
-        uses: cypress-io/github-action@v2
+      - name: setup node
+        uses: actions/setup-node@master
         with:
-          # NOTE: we don't actually run tests here!
-          runTests: false
+          node-version: ${{ matrix.node-version }}
 
-      # Now we run our lints. This is the place where you could run other tests
-      # unrelated to cypress (e.g.: unit tests).
-      - name: Run lints
-        run: npm run lint
-
-      # Now we're building the svelte site.
-      # This step generates a build/ directory.
-      - name: Build site
-        run: npm run build
-
-      # And lastly, we upload the generated build/ folder as artifact so we can
-      # use it in later steps.
-      - name: Upload build and .svelte-kit folder
-        uses: actions/upload-artifact@v2
-        with:
-          name: build
-          if-no-files-found: error
-          path: build
+      # install applicaion dependencies
+      - name: Install dependencies
+        run: |
+          npm install
+          npm ci 
+      # build and test the apps     
+      - name: build
+        run: |
+          npm run build
