--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"svelte-preprocess": "^4.10.1",
 		"tailwindcss": "^3.0.12",
 		"tslib": "^2.3.1",
-		"typescript": "~4.6.2"
+		"typescript": "~4.6.2",
+		"sass": "^1.46.0"
 	},
 	"type": "module",
 	"dependencies": {
