--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
 		"postcss-load-config": "^3.1.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
+		"sass": "^1.46.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.1",
 		"tailwindcss": "^3.0.12",
 		"tslib": "^2.3.1",
-		"typescript": "~4.6.2",
-		"sass": "^1.46.0"
+		"typescript": "~4.6.2"
 	},
 	"type": "module",
 	"dependencies": {
