--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,7 +68,7 @@ jobs:
             context: ./
             file: ./Dockerfile
             push: true
-            tags: ${{ secrets.DOCKERHUB_USERNAME }}/marc-schulz:latest
+            tags: ${{ secrets.DOCKERHUB_USERNAME }}/web-henrici:latest
           
         - name: Run the image in a container
           uses: addnab/docker-run-action@v3
